# docs/swagger.json
@@ -34,8 +34,22 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Some string",
-                        "name": "name",
+                        "description": "Some name",
+                        "name": "Name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Some surname",
+                        "name": "Surname",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Some age",
+                        "name": "Age",
                         "in": "query",
                         "required": true
                     }
@@ -57,8 +71,8 @@
             }
         },
         "/student/{id}": {
-            "delete": {
-                "description": "delete",
+            "put": {
+                "description": "update",
                 "consumes": [
                     "application/json"
                 ],
@@ -68,8 +82,29 @@
                 "tags": [
                     "student"
                 ],
-                "summary": "delete student",
+                "summary": "update student",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Some name",
+                        "name": "Name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Some surname",
+                        "name": "Surname",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Some age",
+                        "name": "Age",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Some id",
@@ -93,8 +128,8 @@
                     }
                 }
             },
-            "patch": {
-                "description": "update",
+            "delete": {
+                "description": "delete",
                 "consumes": [
                     "application/json"
                 ],
@@ -104,15 +139,8 @@
                 "tags": [
                     "student"
                 ],
-                "summary": "update student",
+                "summary": "delete student",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Some string",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Some id",
